# project

./: CMakeLists.txt  PracticalSocket.cpp  PracticalSocket.h  TCPserverAndExecute.cpp  app.cpp  app.h  main.cpp
